--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,6 +33,9 @@ import Card from '../components/Card.astro';
 				</linearGradient>
 			</defs>
 		</svg>
+		<a href="/">ホーム</a>
+		<a href="/about/">概要</a>
+		<a href="/blog/">ブログ</a>
 		<h1>Welcome to <span class="text-gradient">MyPage</span></h1>
 		<p class="instructions">
 			To get started, open the directory <code>src/pages</code> in your project.<br />
